# job-hunter-skill

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  TRAE.md  boss_apply.py  config.example.json  doctor.py  pyproject.toml  requirements.txt  resume.example.md  shared.py  skill_entry.py  sxs_apply.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: openai.yaml
docs/: GITHUB_RELEASE_v0.1.0.md  GITHUB_REPO_COPY.md  RELEASE_CHECKLIST.md  REPO_MAP.md  START_HERE.md
examples/: config.example.json  resume.example.md
job_hunter_skill/: __init__.py  boss_apply.py  doctor.py  shared.py  skill_entry.py  sxs_apply.py
scripts/: publish_release.ps1
tests/: test_core.py
