[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter-skill"
version = "0.1.0"
description = "基于 DrissionPage 和 CDP 接管的求职自动化工具，支持 Boss直聘 和 实习僧。"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Job Hunter contributors" }
]
keywords = [
  "job-hunter",
  "drissionpage",
  "automation",
  "boss-zhipin",
  "shixiseng",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "DrissionPage>=4.1,<5",
]

[project.optional-dependencies]
dev = []

[project.scripts]
job-hunter = "skill_entry:main"
job-hunter-boss = "boss_apply:main"
job-hunter-sxs = "sxs_apply:main"
job-hunter-doctor = "doctor:main"

[tool.setuptools]
py-modules = ["skill_entry", "shared", "boss_apply", "sxs_apply", "doctor"]
